opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_quick_test"
bug-reports: "https://github.com/janestreet/ppx_quick_test/issues"
dev-repo: "git+https://github.com/janestreet/ppx_quick_test.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_quick_test/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_kernel"
  "base"
  "base_quickcheck"
  "core"
  "core_kernel"
  "expect_test_helpers_async"
  "expect_test_helpers_core"
  "ppx_expect"
  "ppx_here"
  "ppx_jane"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "ppxlib_jane"
  "stdio"
  "dune"                      {>= "3.17.0"}
  "ppxlib"                    {>= "0.33.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Spiritual equivalent of let%expect_test, but for property based tests as an ergonomic wrapper to write quickcheck tests."
description: "
Part of the Jane Street's PPX rewriters collection.
"
