(library
 (name ppx_quick_test)
 (public_name ppx_quick_test)
 (libraries ppx_quick_test_expander core ppx_expect
   base_quickcheck.ppx_quickcheck ppx_sexp_conv ppxlib)
 (kind ppx_rewriter)
 (preprocess no_preprocessing)
 (ppx_runtime_libraries expect_test_helpers_core.expect_test_helpers_base
   core ppx_quick_test.core ppx_quick_test.runtime_lib))
