(library
 (public_name ppx_quick_test.async)
 (name ppx_quick_test_async)
 (libraries async_kernel async.async_quickcheck core
   expect_test_helpers_async
   expect_test_helpers_core.expect_test_helpers_base
   ppx_quick_test_runtime_lib)
 (preprocess
  (pps ppx_sexp_message ppx_sexp_conv ppx_jane)))
